unpackaged/main/default/objects/Contact/fields/UpdateBySFCCIntUser__c.field-meta.xml
<CustomField>
    <fullName>UpdateBySFCCIntUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update By SFCC Int User</label>
    <type>Checkbox</type>
</CustomField>