unpackaged/main/default/objects/Contact/fields/Updated_by_B2C_Platform_Event__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_B2C_Platform_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... internal field that causes Contact updates to bypass the B2C Commerce Platform Event processing.</description>
    <inlineHelpText>... internal field that causes Contact updates to bypass the B2C Commerce Platform Event processing.</inlineHelpText>
    <label>Bypass B2C Commerce Platform Event</label>
    <type>Checkbox</type>
</CustomField>