unpackaged/main/default/objects/Contact/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <formula>IF(VIP_Contact__c = TRUE,
(IMAGE(&quot;https://pvhservicecloud--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Gif&amp;versionId=0683t00000C5BLV&amp;operationContext=CHATTER&amp;contentId=05T3t00000iwcKK&quot;, &quot;text&quot; , 50, 50)),
&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP</label>
    <type>Text</type>
</CustomField>