unpackaged/main/default/objects/Contact/fields/VIP_Contact__c.field-meta.xml
<CustomField>
    <fullName>VIP_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this person is a VIP and requires special attention (ie - board member)</description>
    <inlineHelpText>Check if this person is a VIP and requires special attention (ie - board member)</inlineHelpText>
    <label>VIP Contact</label>
    <type>Checkbox</type>
</CustomField>