unpackaged/main/default/objects/Contact/fields/WelcomeSource__c.field-meta.xml
<CustomField>
    <fullName>WelcomeSource__c</fullName>
    <label>Latest Welcome Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>1-Overlay</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>2-Footer</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>3-My Account</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>4-Guest Checkout</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>CK CA Guest checkout</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>6-RAF</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>CK Project Blue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>