unpackaged/main/default/objects/Contact/fields/ZdLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ZdLastModifiedDate__c</fullName>
    <description>LastModifiedDate of Zendesk system</description>
    <label>ZdLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>