unpackaged/main/default/objects/Contact/fields/ZdMatchType__c.field-meta.xml
<CustomField>
    <fullName>ZdMatchType__c</fullName>
    <label>ZdMatchType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MultipleMatchByEmailFirstName</fullName>
            </value>
            <value>
                <fullName>MultipleMatchByPhoneFirstName</fullName>
            </value>
            <value>
                <fullName>New-NoEmailMatch</fullName>
            </value>
            <value>
                <fullName>New-noEmailorPhoneInSource</fullName>
            </value>
            <value>
                <fullName>New-NoPhoneMatch</fullName>
            </value>
            <value>
                <fullName>UniqueMatchByEmail</fullName>
            </value>
            <value>
                <fullName>UniqueMatchByEmailFirstName</fullName>
            </value>
            <value>
                <fullName>UniqueMatchByPhone</fullName>
            </value>
            <value>
                <fullName>UniqueMatchByPhoneFirstName</fullName>
            </value>
            <value>
                <fullName>UniqueMatchByFirstName</fullName>
                <isActive>false</isActive>
                <label>UniqueMatchByFirstName</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>