unpackaged/main/default/objects/Contact/fields/ZdMiddleName__c.field-meta.xml
<CustomField>
    <fullName>ZdMiddleName__c</fullName>
    <label>ZdMiddleName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>