unpackaged/main/default/objects/Contact/fields/ZdOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>ZdOtherAddress__c</fullName>
    <label>ZenDesk Other Address</label>
    <type>TextArea</type>
</CustomField>