unpackaged/main/default/objects/Contact/fields/ZdPossibleFraud__c.field-meta.xml
<CustomField>
    <fullName>ZdPossibleFraud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZenDesk Possible Fraud</label>
    <type>Checkbox</type>
</CustomField>