unpackaged/main/default/objects/Contact/fields/ZdProfExtId__c.field-meta.xml
<CustomField>
    <fullName>ZdProfExtId__c</fullName>
    <externalId>true</externalId>
    <label>ZdProfExtId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>