unpackaged/main/default/objects/Contact/fields/ZdTnCUserId__c.field-meta.xml
<CustomField>
    <fullName>ZdTnCUserId__c</fullName>
    <externalId>true</externalId>
    <label>Zendesk T&amp;C User Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>