unpackaged/main/default/objects/Contact/fields/ZdUniqueMatch__c.field-meta.xml
<CustomField>
    <fullName>ZdUniqueMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZdUniqueMatch</label>
    <type>Checkbox</type>
</CustomField>