unpackaged/main/default/objects/Contact/fields/Zenkraft_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Zenkraft_Mailing_Street__c</fullName>
    <label>Zenkraft Mailing Street</label>
    <type>TextArea</type>
</CustomField>