unpackaged/main/default/objects/Contact/fields/Zeta_Callout_Response__c.field-meta.xml
<CustomField>
    <fullName>Zeta_Callout_Response__c</fullName>
    <label>Zeta Callout Response</label>
    <type>TextArea</type>
</CustomField>