unpackaged/main/default/objects/Contact/recordTypes/Data_Owner.recordType-meta.xml
<RecordType>
    <fullName>Data_Owner</fullName>
    <active>true</active>
    <description>A Brand&#39;s Data Owner Responsible For Handling Privacy Requests</description>
    <label>Data Owner</label>
</RecordType>