unpackaged/main/default/objects/Contact/recordTypes/SMSMobile.recordType-meta.xml
<RecordType>
    <fullName>SMSMobile</fullName>
    <active>true</active>
    <label>SMSMobile</label>
</RecordType>