unpackaged/main/default/objects/Contact/listViews/Contacts_with_Unsub_Reasons.listView-meta.xml
<ListView>
    <fullName>Contacts_with_Unsub_Reasons</fullName>
    <columns>Customer_Id__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Brand__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Status__c</columns>
    <columns>UnsubReason__c</columns>
    <columns>LoyaltyID__c</columns>
    <columns>External_Id__c</columns>
    <columns>EmailOptInStatus__c</columns>
    <columns>EmailOptInDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Contacts with Unsub Reasons</label>
</ListView>