unpackaged/main/default/objects/Contact/listViews/Data_Owners.listView-meta.xml
<ListView>
    <fullName>Data_Owners</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>System_Type__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Data_Owner</value>
    </filters>
    <label>Data Owners</label>
</ListView>