unpackaged/main/default/objects/Contact/listViews/Olga_Contacts.listView-meta.xml
<ListView>
    <fullName>Olga_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Source_System__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>EmailOptInStatus__c</columns>
    <columns>EmailOptInDate__c</columns>
    <columns>EmailOptOutDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_Id__c</field>
        <operation>equals</operation>
        <value>10</value>
    </filters>
    <filters>
        <field>Source_System__c</field>
        <operation>equals</operation>
        <value>Olga</value>
    </filters>
    <label>Olga API Subscribers</label>
</ListView>