unpackaged/main/default/objects/Contact/listViews/Tommy_Only.listView-meta.xml
<ListView>
    <fullName>Tommy_Only</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Brand__c</columns>
    <columns>Customer_Id__c</columns>
    <columns>EmailOptInStatus__c</columns>
    <columns>EmailOptInDate__c</columns>
    <columns>LoyaltyID__c</columns>
    <columns>EmailOptDownStatus__c</columns>
    <columns>EmailOptOutDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>contains</operation>
        <value>Tommy</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/26/2022 12:00 AM</value>
    </filters>
    <label>Tommy Only</label>
</ListView>