unpackaged/main/default/objects/Contact/listViews/Warner_API_Subscribers.listView-meta.xml
<ListView>
    <fullName>Warner_API_Subscribers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Source_System__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>EmailOptInStatus__c</columns>
    <columns>EmailOptInDate__c</columns>
    <columns>EmailOptOutDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_Id__c</field>
        <operation>equals</operation>
        <value>83</value>
    </filters>
    <filters>
        <field>Source_System__c</field>
        <operation>equals</operation>
        <value>Warner</value>
    </filters>
    <label>Warner API Subscribers</label>
</ListView>